# codesieve

./: .codesieve.yml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/codesieve/: __init__.py  __main__.py  cli.py  config.py  engine.py  models.py  report.py  scoring.py
src/codesieve/langs/: __init__.py  _patterns.py  javascript.py  php.py  protocols.py  python.py  typescript.py
src/codesieve/parser/: ast_utils.py  languages.py  treesitter.py
src/codesieve/sieves/: base.py  comments.py  deprecated_api.py  dry.py  error_handling.py  guard_clauses.py  kiss.py  magic_numbers.py  naming.py  nesting.py  type_hints.py
tests/: test_cli.py  test_comments.py  test_config.py  test_dry.py  test_engine.py  test_error_handling.py  test_guard_clauses.py  test_js_deprecated_api.py  test_js_engine.py  test_js_error_handling.py  test_js_guard_clauses.py  test_js_kiss.py  test_js_magic_numbers.py  test_js_naming.py  test_js_nesting.py  test_kiss.py  test_magic_numbers.py  test_naming.py  test_nesting.py  test_php_deprecated_api.py  test_php_engine.py  test_php_error_handling.py  test_php_guard_clauses.py  test_php_kiss.py  test_php_magic_numbers.py  test_php_naming.py  test_php_nesting.py  test_php_type_hints.py  test_report.py  test_scoring.py  test_ts_engine.py  test_ts_error_handling.py  test_ts_guard_clauses.py  test_ts_kiss.py  test_ts_magic_numbers.py  test_ts_naming.py  test_ts_nesting.py  test_ts_type_hints.py  test_type_hints.py
tests/fixtures/javascript/: bad.js  good.js
tests/fixtures/php/: bad.php  good.php
(+5 files in other folders)
